<resources>
    <string name="app_name">Dealership Management</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Admin_Dashboard">Admin Dashboard</string>
    <string name="Locate_Vehicle">Locate Vehicle</string>
    <string name="Book_Vehicle">Book Vehicle</string>
    <string name="Vehicle_Information">Vehicle Information</string>
    <string name="Current_Vehicles">Current Vehicles</string>
    <string name="Exit">Exit</string>
    <string name="Login">Login</string>
    <string name="Company_Logo">Company Logo</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Enter">Enter</string>
    <string name="Register_New_Employee">Register New Employee</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Role">Role</string>
    <string name="Register">Register</string>
    <string name="Vehicle_Numberplate_Search">Vehicle Numberplate Search</string>
    <string name="Number_Plate">Number Plate</string>
    <string name="Find_Vehicle">Find Vehicle</string>
    <string name="Vehicle_Details">Vehicle Details</string>
    <string name="Vehicle_Number_Plate">Vehicle Number Plate</string>
    <string name="Vehicle_Make">Vehicle Make</string>
    <string name="Vehicle_Model">Vehicle Model</string>
    <string name="Vehicle_Year">Vehicle Year</string>
    <string name="Service_Needed">Service Needed</string>
    <string name="Vehicle_Location">Vehicle Location</string>
    <string name="Comments">Comments</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Book_New_Vehicle">Book New Vehicle</string>
    <string name="Book">Book</string>
    <string name="Register_Employee">Register Employee</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Signout">Signout</string>
    <string name="Current_Employees">Current Employees</string>
    <string name="Employee_Information">Employee Information</string>
    <string name="Employee_Username_Search">Employee Username Search</string>
    <string name="Find_Employee">Find Employee</string>
    <string name="Search_Again">Search Again</string>
    <string name="Employee_Details">Employee Details</string>
    <string name="Employee_Registration">Employee Registration</string>
</resources>