<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentVehiclesActivity"
    android:background="@color/teal">
    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/VehicleTable_View"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:stretchColumns="2"
                    android:shrinkColumns="3">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Table_NumberPlate"
                            android:padding="5dp"
                            android:text="@string/Number_Plate"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_VehicleMake"
                            android:padding="5dp"
                            android:text="@string/Vehicle_Make"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_VehicleModel"
                            android:padding="5dp"
                            android:text="@string/Vehicle_Model"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_VehicleYear"
                            android:padding="5dp"
                            android:text="@string/Vehicle_Year"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_ServiceNeeded"
                            android:padding="5dp"
                            android:text="@string/Service_Needed"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_VehicleLocation"
                            android:padding="5dp"
                            android:text="@string/Vehicle_Location"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_Comments"
                            android:padding="5dp"
                            android:text="@string/Comments"
                            android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </HorizontalScrollView>
            </ScrollView>
            <Button
                android:id="@+id/Dashboard_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dashboard"
                android:layout_gravity="bottom|center_horizontal"
                android:backgroundTint="@color/black"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>