<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentVehiclesActivity"
    android:background="@color/teal">
    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/UserTable_View"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:stretchColumns="*"
                    android:shrinkColumns="1">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Table_Username"
                            android:padding="10dp"
                            android:text="@string/Username"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_FirstName"
                            android:padding="10dp"
                            android:text="@string/First_Name"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_LastName"
                            android:padding="10dp"
                            android:text="@string/Last_Name"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_Password"
                            android:padding="10dp"
                            android:text="@string/Password"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/Table_Role"
                            android:padding="10dp"
                            android:text="@string/Role"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>
        <Button
            android:id="@+id/Dashboard_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dashboard"
            android:layout_gravity="bottom|center_horizontal"
            android:backgroundTint="@color/black"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>