<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleInformationViewActivity"
    android:background="@color/teal">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vehicle_Details"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black"/>
            <EditText
                android:id="@+id/NumberPlate_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/license_plate_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Vehicle_Number_Plate"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,TextFields"/>
            <EditText
                android:id="@+id/VehicleMake_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/car_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Vehicle_Make"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/VehicleModel_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/car_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Vehicle_Model"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/VehicleYear_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/car_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Vehicle_Year"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/ServiceNeeded_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/services_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Service_Needed"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/VehicleLocation_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/car_locator_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Vehicle_Location"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/Comments_View"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/comments_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Comments"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textColor="@color/black"

                tools:ignore="Autofill"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/UpdateVehicle_Button"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Update"
                    android:textColor="@color/WhiteSmoke"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/DeleteVehicle_Button"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Delete"
                    android:textColor="@color/WhiteSmoke"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/SearchAgain_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Search_Again"
                    android:textColor="@color/WhiteSmoke"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/Dashboard_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="60dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Dashboard"
                    android:textColor="@color/WhiteSmoke"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>