<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeInformationViewActivity"
    android:background="@color/teal">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Employee_Details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/black"/>
            <EditText
                android:id="@+id/Username_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/person_icon_outline"
                android:drawablePadding="20dp"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/FirstName_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/person_icon_outline"
                android:drawablePadding="20dp"
                android:hint="@string/First_Name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/LastName_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/person_icon_outline"
                android:drawablePadding="20dp"
                android:hint="@string/Last_Name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/Password_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <EditText
                android:id="@+id/Role_View"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:drawableStart="@drawable/manager_icon"
                android:drawablePadding="20dp"
                android:hint="@string/Role"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/UpdateVehicle_Button"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Update"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/DeleteVehicle_Button"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Delete"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/SearchAgain_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Search_Again"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/Dashboard_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/Dashboard"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>