<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@color/teal">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dashboard"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/LocateVehicle_Button"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:text="@string/Locate_Vehicle"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/car_locator_icon"
                    android:backgroundTint="@color/LightGrey"/>
                <Button
                    android:id="@+id/BookVehicle_Button"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:text="@string/Book_Vehicle"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/book_vehicle_icon"
                    android:backgroundTint="@color/LightGrey"/>
                <Button
                    android:id="@+id/VehicleInfo_Button"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:text="@string/Vehicle_Information"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/license_plate_icon"
                    android:backgroundTint="@color/LightGrey"/>
                <Button
                    android:id="@+id/CurrentVehicles_Button"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:text="@string/Current_Vehicles"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/current_vehicle_icon"
                    android:backgroundTint="@color/LightGrey"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/black"/>
            <Button
                android:id="@+id/Signout_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"
                android:text="@string/Signout"
                android:textSize="18sp"/>
        </GridLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>